# DSA-Project-3

./: .gitignore  Algorithm1.cpp  Algorithm1.h  Algorithm2.cpp  Algorithm2.h  CMakeLists.txt  DataParsing.cpp  DataParsing.h  InputHelpers.cpp  Movie.cpp  Movie.h  MovieT.h  README.md  RatingEntry.cpp  RatingEntry.h  User.cpp  User.h  UserInput.cpp  UserInput.h  dataParsing.cpp  dataParsing.h  input_helpers.cpp  input_helpers.h  main.cpp  userInput.cpp  userInput.h
Algorithms/: Algorithm1.cpp  Algorithm1.h  Algorithm2.cpp  Algorithm2.h
DataHandling/: DataParsing.cpp  DataParsing.h  UserInput.cpp  UserInput.h
Model/: Movie.cpp  Movie.h  MovieT.cpp  RatingEntry.cpp  User.cpp  User.h
