cmake_minimum_required(VERSION 3.27)
project(DSAProject3)

set(CMAKE_CXX_STANDARD 17)

add_executable(DSAProject3 main.cpp
        Algorithm1.cpp
        Algorithm1.h
        Movie.cpp
        Movie.h
        Movie.h
        Algorithm2.cpp
        Algorithm2.h
        userInput.cpp
        userInput.h
        dataParsing.cpp
        dataParsing.h)
